<resources>
    <string name="app_name">LifestyleApp</string>

    <!--User Info-->
    <string name="first_name_field">First Name:</string>
    <string name="last_name_field">Last Name:</string>
    <string name="height_field">Height:</string>
    <string name="weight_field">Weight:</string>
    <string name="sex_field">Sex:</string>
    <string name="city_field">City:</string>
    <string name="country_field">Country:</string>
    <string name="preference_file_key"></string>

    <string name="edit_profile_button">Edit Profile</string>
    <string name="profile_image">Profile Image</string>

    <!--Headers-->
    <string name="profile_header">Your Profile</string>
    <string name="goals_header">Fitness Goals</string>

    <!--Goals-->
    <string name="goal_select">I want to</string>
    <string name="enter">Enter:</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="activity_level">I am:</string>
    <string name="active">Active</string>
    <string name="sedentary">Sedentary</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="BMR">Calculate BMR:</string>
    <string name="goal_end">pounds a week.</string>
    <string name="calorie_estimate">Calculate Calories:</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="goal_amount">Amount</string>

    <!--General-->
    <string name="default_text">Text View</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_test">firstUser</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_bmi_input">"Please enter numbers only."</string>

</resources>